unpackaged/main/default/objects/Functional_Area__c/Functional_Area__c.object-meta.xml
<CustomObject>
    <description>Contains Functional Areas by Product Affected</description>
    <label>Functional Area</label>
    <nameField>
        <label>Functional Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>