unpackaged/main/default/objects/Functional_Area__c/fields/ALL__c.field-meta.xml
<CustomField>
    <fullName>ALL__c</fullName>
    <defaultValue>&quot;ALL&quot;</defaultValue>
    <description>All Functional Areas for searching purposes</description>
    <label>ALL</label>
    <length>3</length>
    <type>Text</type>
</CustomField>