unpackaged/main/default/objects/Functional_Area__c/fields/Possible_Found_Technology__c.field-meta.xml
<CustomField>
    <fullName>Possible_Found_Technology__c</fullName>
    <label>Possible Found Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ci</fullName>
            </value>
            <value>
                <fullName>Ci Anywhere</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>DxP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>