unpackaged/main/default/objects/Functional_Area__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <description>When to use this Functional Area</description>
    <label>Usage</label>
    <type>TextArea</type>
</CustomField>