unpackaged/main/default/objects/Functional_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Affected__c</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>