unpackaged/main/default/objects/Functional_Area__c/listViews/Asset_Management_AM.listView-meta.xml
<ListView>
    <fullName>Asset_Management_AM</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Customer Relationship Management (CRM)</value>
    </filters>
    <label>Customer Relationship Management (CRM)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>