unpackaged/main/default/objects/Functional_Area__c/listViews/Business_Process_Management_BPM.listView-meta.xml
<ListView>
    <fullName>Business_Process_Management_BPM</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Enterprise Content Management (ECM)</value>
    </filters>
    <label>Enterprise Content Management (ECM)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>