unpackaged/main/default/objects/Functional_Area__c/listViews/Customer_Relationship_Management_CRM.listView-meta.xml
<ListView>
    <fullName>Customer_Relationship_Management_CRM</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Enterprise Cash Receipting (ECR)</value>
    </filters>
    <label>Enterprise Cash Receipting (ECR)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>