unpackaged/main/default/objects/Functional_Area__c/listViews/Enterprise_App_Store.listView-meta.xml
<ListView>
    <fullName>Enterprise_App_Store</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Enterprise App Store</value>
    </filters>
    <label>Enterprise App Store</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>