unpackaged/main/default/objects/Functional_Area__c/listViews/Enterprise_App_Store1.listView-meta.xml
<ListView>
    <fullName>Enterprise_App_Store1</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Asset Management (AM)</value>
    </filters>
    <label>Asset Management (AM)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>