unpackaged/main/default/objects/Functional_Area__c/listViews/Enterprise_Content_Management_ECM.listView-meta.xml
<ListView>
    <fullName>Enterprise_Content_Management_ECM</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Financials (FIN)</value>
    </filters>
    <label>Financials (FIN)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>