unpackaged/main/default/objects/Functional_Area__c/listViews/Financials_FIN.listView-meta.xml
<ListView>
    <fullName>Financials_FIN</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Human Resource &amp; Payroll (HRP)</value>
    </filters>
    <label>Human Resource &amp; Payroll (HRP)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>