unpackaged/main/default/objects/Functional_Area__c/listViews/Human_Resource_Payroll_HRP.listView-meta.xml
<ListView>
    <fullName>Human_Resource_Payroll_HRP</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Property &amp; Rating (P&amp;R)</value>
    </filters>
    <label>Property &amp; Rating (P&amp;R)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>