unpackaged/main/default/objects/Functional_Area__c/listViews/Student_Management_SM.listView-meta.xml
<ListView>
    <fullName>Student_Management_SM</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Supply Chain Management (SCM)</value>
    </filters>
    <label>Supply Chain Management (SCM)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>