unpackaged/main/default/objects/Functional_Area__c/listViews/Supply_Chain_Management_SCM.listView-meta.xml
<ListView>
    <fullName>Supply_Chain_Management_SCM</fullName>
    <columns>NAME</columns>
    <columns>Usage__c</columns>
    <columns>Possible_Found_Technology__c</columns>
    <columns>Product_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Affected__c</field>
        <operation>equals</operation>
        <value>Customer Community</value>
    </filters>
    <label>Customer Community</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>